# Bloggeroo

./: .gitignore  Cargo.toml  README.md  makefile  package-lock.json  package.json  tailwind.config.js
src/: main.rs
templates/: article.html  base.html  index.html
