[package]
name = "bloggeroo"
version = "0.1.0"
edition = "2021"
description = "Static Blog Generator"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
glob = "0.3.1"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.11"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
tera = "1.19.0"
toml = "0.7.6"
rss = "2.0"
